[gd_scene load_steps=2 format=3 uid="uid://ct4n4sr07sfam"]

[ext_resource type="Script" path="res://PopupMenu.gd" id="1_vktpd"]

[node name="PopupMenu" type="PopupMenu"]
visible = true
script = ExtResource("1_vktpd")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TowerUpgradeButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="NewTowerButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HeroUpgradeButton" type="Button" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
